# kit

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  EXAMPLES.md  ISSUE_TEMPLATE.md  LICENSE-RUNTIME.md  Makefile  README.md  helloworld.kit  kitlang.cabal  package.yaml  stack.yaml
.github/: CONTRIBUTING.md
.packages/: install_test.sh  linux.sh  osx.sh  windows.sh
.packages/scoop/: kitlang-prerelease.json
samples/: README.md  hangman.kit
samples/hangman/: hangman.kit
samples/sdl/: sdl.kit
src/: Kit.hs
src/Kit/: Ast.hs  Compiler.hs  Error.hs  Hash.hs  HashTable.hs  Ir.hs  Log.hs  Map.hs  NameMangling.hs  Parser.hs  Str.hs  Toolchain.hs
src/bootstrap/: README.md  document.h  eval.c  maybe.h  string.h
std/: prelude.kit
std/kit/: argparse.kit  array.kit  c_builtins.kit  cmp.kit  common.kit  const.kit  either.kit  file.kit  hash.kit  io.kit  iterator.kit  list.kit  map.kit  math.kit  mem.kit  null.kit  numeric.kit  option.kit  pointer.kit  pointers.kit  property.kit  random.kit  result.kit  ring_buffer.kit  set.kit  slice.kit  string.kit  sys.kit  utils.kit  vector.kit  xml.kit  yaml.kit
tests/: StdSpec.hs  Test.hs
tests/Kit/: CompilerSpec.hs
tests/compile-src/: README.md  abstracts.kit  abstracts.stdout  allocation.kit  allocation.stdout  associated_types.stdout  autorefderef.kit  autorefderef.stdout  box.kit  box.stdout  carray.kit  carray.stdout  (+54 more)
toolchains/: darwin-clang  darwin-clang.env  darwin-emscripten  darwin-gcc  darwin-gcc.env  emscripten  linux-clang  linux-gcc  none  windows-mingw
utils/: kit.kak  kit.nanorc  kit.vim
(+357 files in other folders)
