name: kitlang
version: 0.1.0.0
license: LGPL
license-file: LICENSE.md
author: Ben Morris <ben@bendmorris.com>
build-type: Simple
cabal-version: >= 1.10

-- kit build tool
executable kit
  main-is: BuildTool.hs
  hs-source-dirs: bin
  build-depends:
    base >=4.7,
    ansi-terminal == 0.6.2.3,
    optparse-applicative == 0.12.1.0
  ghc-options: -Wall -O2

-- kitc compiler
executable kitc
  main-is: Kitc.hs
  hs-source-dirs: bin
  build-depends:
    base >=4.7,
    ansi-terminal == 0.6.2.3,
    optparse-applicative == 0.12.1.0
  ghc-options: -Wall -O2

-- main libarry
library
  exposed-modules:
    Kit,
      Kit.Ast.Expr,
      Kit.Ast.Modifier,
      Kit.Ast.Operator,
      Kit.Ast.Span,
      Kit.Ast.Type,
      Kit.Ast.Value,
      Kit.Parser,
      Kit.Parser.Lexer,
      Kit.Parser.Parser,
      Kit.Parser.Token
  hs-source-dirs: bin src
  build-depends:
    base >=4.7,
    bytestring,
    array,
    filepath,
    text,
    directory,
    optparse-applicative == 0.12.1.0
  build-tools: alex, happy
  default-language: Haskell2010
  ghc-options: -Wall -O2

-- tests
test-suite unit-tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: tests
  build-tools: alex, happy
  build-depends:
    kitlang,
    base >= 4.7,
    bytestring,
    array,
    filepath,
    text,
    directory,
    hspec,
    QuickCheck == 2.8.2
